slack/global-anchors/validate/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-nginx-allowed-registory
spec:
  containers:
  - name: nginx
    image: nginx
  imagePullSecrets:
  - name: my-registry-secret

---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-nginx-disallowed-registory
spec:
  containers:
  - name: nginx
    image: nginx
  imagePullSecrets:
  - name: other-registory-secret

---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-httpd-allowed-registory
spec:
  containers:
  - name: httpd
    image: httpd
  imagePullSecrets:
  - name: my-registry-secret
